tests/compile_fail/exist_edge_to_new_ref_dir.rs
use grw::modify::*;
use grw::id;

fn main() {
    let _ = X(id::N(1)) & (e() >> n(23));
}
